@@ -1,4 +1,5 @@
 Version 6.2.4
+- Added #pragma exportdef to make defines apply in other files
 - Added freopen(), tmpfile(), mktemp(), and some other stdio functions
 - Added some missing math functions
 - Correctly handled casts to void in nucode output
